--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 body{
     margin: 0;
     padding: 0;
-    font-family: 'Rotterburg Stylish FREE', arial;
+    font-family: 'Rotterburg Stylish FREE', arial!important;
     font-style: 24px;
     line-height: 1.5;
     background-color: var(--mainDark);
